--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,19 +2,120 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T06:42:05.415564400Z",
+     "start_time": "2023-07-18T06:41:42.536891100Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "train = pd.read_csv('dataset/train.csv')\n",
+    "test = pd.read_csv('dataset/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "#독립변수와 종속변수를 분리합니다.\n",
+    "train_X = train.iloc[:,4:]\n",
+    "train_Y = train.iloc[:,0:4]\n",
+    "test_X = test.iloc[:,1:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T06:42:28.941696Z",
+     "start_time": "2023-07-18T06:42:28.647837700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "#케라스를 통해 모델 생성을 시작합니다.\n",
+    "import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "model = Sequential()\n",
+    "model.add(Dense(units=330, activation='relu', input_dim=226))\n",
+    "model.add(Dense(units=718, activation='relu'))\n",
+    "model.add(Dense(units=718, activation='relu'))\n",
+    "model.add(Dense(units=4, activation='linear'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-18T06:42:36.191091500Z",
+     "start_time": "2023-07-18T06:42:32.484210400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#모델을 컴파일합니다.\n",
+    "model.compile(loss='mae', optimizer='adam', metrics=['mae'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#모델을 학습합니다.\n",
+    "model.fit(train_X, train_Y, epochs=40, batch_size=10000, validation_split = 0.05)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#예측값을 생성합니다.\n",
+    "pred_test = model.predict(test_X)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#submission 파일을 생성합니다.\n",
+    "sample_sub = pd.read_csv('sample_submission.csv', index_col=0)\n",
+    "submission = sample_sub+pred_test\n",
+    "submission.to_csv('submission.csv')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "fom",
    "language": "python",
-   "name": "python3"
+   "display_name": "fom"
   },
   "language_info": {
    "codemirror_mode": {
